[package]
name = "vhp-api"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.80.0", features = ["oapi"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
once_cell = "1.18"